secondary coil dimensions

--- a/transformer_report.tex
+++ b/transformer_report.tex
@@ -136,6 +136,10 @@ Thus, the important factor is the penetration factor (i.e the ratio of conductor
 !! Secondary winding factorunu karsilastir
 \cite{Sullivan2003,Ferreira1994} makalelerini oku
 
+\section{Secondary-Winding}
+kablo katalogu
+http://dielectricsciences.thomasnet.com/viewitems/all-categories/wire-cable-2
+
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
 %----------------------------------------------------------------------------------------
