--- a/transformer_report.tex
+++ b/transformer_report.tex
@@ -87,13 +87,12 @@ This report presents the material options for the core of the medium frequency t
 \section{Introduction}
 
 
-A literature review is presented by Robert Fox within WP 2 and different medium-frequency transformers were compared and transformer components are listed. This report will focus on the core materials and main losses in a transformer.
+A literature review is presented by Robert Fox within WP 2, in which different medium-frequency transformers were compared and the components of medium-frequency transformers are listed. This report will focus on the core materials and the main losses in a transformer.
 
+Increasing frequency of a transformer reduces its volume and cost. In \cite{Prasai2007}, it is stated that the weight and size of a 3 MW 1.2 kHz transformer is less than 8\% of an equivalent 50 Hz line transformer. In Fig.~\ref{transformer-vols}, volume variation with operating frequency for a 1 MW transformer is presented.
 
-Increasing frequency of a transformer reduces its volume and cost. In \cite{Prasai2007}, it is stated that the weight and size of a 3 MW 1.2 kHz transformer is less than 8\% of an equivalent 50 Hz unit. In Fig.~\ref{transformer-vols}, volume variation with operating frequency for a 1 MW transformer is presented.
-
-However, as the frequency is increased effects such as skin and proximity, hysteresis losses and dielectric losses are significantly increased in relation to operation at line frequency. the design of the transformer becomes more important for maximum efficiency. Furthermore, the reduction in size usually implies increased power density, which which demands considerable thermal management efforts. 
-Important design factors in line and medium to high frequency transformers are tabulated in Table~\ref{important}.
+However, as the frequency is increased, skin effect, proximity effect, hysteresis losses and dielectric losses are significantly increased. Furthermore, the reduction in size usually implies same power loss in much smaller area, which demands forced cooling.
+Important design factors in conventional line transformes and high frequency transformers are tabulated in Table~\ref{important}.
 Challenges of medium-high frequency transformers can be listed as 
  \cite{Villar2010}:
 
@@ -139,7 +138,7 @@ Although, various types of electrical steel laminations are commonly used in pow
 
 \subsection*{Amorphous Materials}
 
-Amorphous cores are typically made of Metglas (metalic glass alloy), which is a thin non-crystalline amorphous metal alloy of iron, boron, silicon and phosphorus. The material has a much higher resistivity in electrical steel which results in a low eddy losses. Furthermore, the hysteresis losses are lower, thus, no-load losses in a transformer with amorphous core will be much lower compared to one with electrical steel. However, amorphous materials usually have lower saturation flux density compared to conventional iron-silicon electrical steel.
+Amorphous cores are typically made of Metglas (metalic glass alloy), which is a thin non-crystalline amorphous metal alloy of iron, boron, silicon and phosphorus. The material has a much higher resistivity in electrical steel which results in a low eddy losses. Furthermore, the hysteresis losses of amorphous cores are lower, which reduces the no-load losses compared to one with electrical steel. However, amorphous materials usually have lower saturation flux density compared to conventional iron-silicon electrical steel.
 
 Some manufacturers of amorphous transformer cores can be listed as:
 
@@ -150,13 +149,13 @@ Some manufacturers of amorphous transformer cores can be listed as:
   \item Vijai Electricals
 \end{itemize}
 
-Amorphous materials are superior to electrical steel laminations. However, nano-crystalline materials are superior to amorphous materials, with their lower cost, higher flux densities \cite{vitroperm_vitrovac}. Nano-crystalline materials will be discussed in the next section. The specifications of amorphous and nano-crystalline materials are compared in Table~\ref{vitropermvitrovac}. The only  application that a amorphous material can be more advantageous is the  high-frequency single-ended forward converter topologies. For other topologies, the nano-crystalline materials are though to be more suitable.
+Although, amorphous materials are superior to electrical steel laminations, nano-crystalline materials are superior to amorphous materials with their lower cost and higher flux densities \cite{vitroperm_vitrovac}. Nano-crystalline materials will be discussed in the next section. The specifications of amorphous and nano-crystalline materials are compared in Table~\ref{vitropermvitrovac}. The only  application that a amorphous material can be more advantageous is high-frequency single-ended forward converter topologies. For all other topologies, nano-crystalline materials are considered to be more suitable.
 
 \begin{table}[]
 \begin{center}
 \begin{tabular}{lcc}
  & Amorphous & Nano-crystalline \\ 
- & (Vitrovac) & (Vitroperm) \\
+ & (Vitrovac) & (VitroPerm) \\
 \hline
 Saturation Flux Density & 0.8 T & 1.2 T \\
 Losses (f= 20 kHz, B=0.2 T) & 2 W/kg & 1.4 W/kg \\
@@ -165,7 +164,7 @@ Curie temperature & $365\,^{\circ}\mathrm{C}$ & $600\,^{\circ}\mathrm{C}$ \\
 \hline
 \end{tabular} 
 \end{center}
-\caption{Comparison of amorphous (Vitrovac) and nano-crystalline (Vitroperm) materials \cite{vitroperm_vitrovac}.}
+\caption{Comparison of amorphous (Vitrovac) and nano-crystalline (VitroPerm) materials \cite{vitroperm_vitrovac}.}
 \label{vitropermvitrovac}
 \end{table}
 
@@ -182,7 +181,6 @@ Nano-crystalline is a fairly new material that consists of approximately 80\% of
   \item Stacking density up to 90 \% can be achieved.
 \end{itemize}
 
-
 Some main manufacturers of nano-crystalline materials can be listed as:
 
 \begin{itemize}
@@ -192,46 +190,45 @@ Some main manufacturers of nano-crystalline materials can be listed as:
 \end{itemize}
 
 In this section, different types of nano-crystalline materials will be compared. 
-Vacuumschmelze manufactures the following soft magnetic nano-crystalline materials:
+Vacuumschmelze manufactures various soft magnetic nano-crystalline materials under the brand of VitroPerm.
 
 
 \subsubsection*{VitroPerm}
 
-
-Nanocrystalline VITROPERM alloys are based on Fe with Si and B with Nb and Cu additives \cite{vitroterm_manual}. VITROPERM nano-crystalline alloys are optimized to combine highest permeability and lowest coercive field strength. The combination of very thin tapes and the relatively high electrical resistance (1.1-1.2~$\mu \Omega m$) to ensure minimal eddy current losses and an outstanding frequency vs. permeability behaviour. Along with saturation flux density of 1.2 T and wide operational temperature range, these features combine to make VITROPERM  superior in many aspects to commonly used ferrite and amorphous materials. Magnetization curves and B-H characteristics of Vitroperm material are presented in Fig.~\ref{vitroterm_BH}.
+Nanocrystalline VitroPerm alloys are based on Fe with Si and B with Nb and Cu additives \cite{vitroterm_manual}. VitroPerm nano-crystalline alloys are optimized to combine highest permeability and lowest coercive field strength. The combination of very thin tapes and the relatively high electrical resistance (1.1-1.2~$\mu \Omega m$) to ensure minimal eddy current losses and an outstanding frequency vs. permeability behaviour. Along with saturation flux density of 1.2 T and wide operational temperature range, these features combine to make VitroPerm  superior in many aspects to commonly used ferrite and amorphous materials. Magnetization curves and B-H characteristics of VitroPerm materials are presented in Fig.~\ref{vitroterm_BH}.
 
 \begin{figure}[]
   \centering
     \includegraphics[scale=0.3]{vitroperm_magnetization}
     \includegraphics[scale=0.3]{vitroterm_hysteresis}
-    \caption{Magnetisation curve and B-H characteristics of Vitroperm \cite{vitroterm_manual}.}
+    \caption{Magnetisation curve and B-H characteristics of VitroPerm \cite{vitroterm_manual}.}
   \label{vitroterm_BH}
 \end{figure}
 
-Vitroperm has a wide range material options with different permeability scale as as shown in Fig.~\ref{vitroterm_permeability}. 
-The permeability of Vitroperm 500F is significantly higher than ferrite as shown in Fig.~\ref{vitroperm500_250_permeability}.
+VitroPerm has a wide range material options with different permeability scale as as shown in Fig.~\ref{vitroterm_permeability}. 
+The permeability of VitroPerm 500F is significantly higher than ferrite as shown in Fig.~\ref{vitroperm500_250_permeability}.
 
 \begin{figure}[]
   \centering
     \includegraphics[scale=0.3]{vitroterm_permeability}
-  \caption{Permeability change of different Vitroperm materials with frequency \cite{vitroterm_toroidal}.}
+  \caption{Permeability change of different VitroPerm materials with frequency \cite{vitroterm_toroidal}.}
   \label{vitroterm_permeability}
 \end{figure}
 
 \begin{figure}[]
   \centering
     \includegraphics[scale=0.3]{vitroperm500_250_permeability}
-  \caption{Permeability change of Vitroperm 250F($\mu = 5000$), Vitroperm 500F($\mu = 40000$) and ferrite($\mu = 5000$) with frequency. \cite{vitroterm_manual}.}
+  \caption{Permeability change of VitroPerm 250F($\mu = 5000$), VitroPerm 500F($\mu = 40000$) and ferrite($\mu = 5000$) with frequency. \cite{vitroterm_manual}.}
   \label{vitroperm500_250_permeability}
 \end{figure}
 
 
-Vitroperm has also a high operating temperature compared to ferrite. The Curie temperature of Vitroperm alloys are $600\,^{\circ}\mathrm{C}$. Furthermore, the saturation flux density only reduces by 10\% at $120\,^{\circ}\mathrm{C}$, which allows the core can be overloaded for short-amount of periods up to $180-200 \,^{\circ}\mathrm{C}$. The variation of permeability with temperature for Vitroperm is presented in Fig.~\ref{temp_vs_saturation}.
+VitroPerm has also a high operating temperature compared to ferrite. The Curie temperature of VitroPerm alloys are $600\,^{\circ}\mathrm{C}$. Furthermore, the saturation flux density only reduces by 10\% at $120\,^{\circ}\mathrm{C}$, which allows the core can be overloaded for short-amount of periods up to $180-200 \,^{\circ}\mathrm{C}$. The variation of permeability with temperature for VitroPerm is presented in Fig.~\ref{temp_vs_saturation}.
 
 \begin{figure}[]
   \centering
     \includegraphics[scale=0.3]{temp_vs_saturation}
-  \caption{Saturation flux density variation of Vitroperm with temperature.}
+  \caption{Saturation flux density variation of VitroPerm with temperature.}
   \label{temp_vs_saturation}
 \end{figure}
 
@@ -248,7 +245,6 @@ Ferrites have a low-loss density in very high-frequencies, which makes them a su
 
 Different core materials and manufacturers are presented in Table~\ref{core-loss-table}. In Fig.~\ref{material_table}, prototypes with common core materials are presented. It can be seen from the table that nano-crystalline and amorphous materials are the most suggested materials for medium frequency transformers that work between 1 kHz and 25 kHz.
 
-
 \begin{table}[]
 \begin{center}
 \begin{tabular}{llccl}
@@ -260,7 +256,7 @@ Amorphous & Powerlite & 1.56 T & 0.6 kW/kg & Metglas\\
 & Vitrovac & 0.82 T & 0.19 kW/kg & VAC\\
 \hline
 & Finemet & 1.23 T & 0.14 kW/kg & Hitachi\\
-Nano-crystalline& Vitroperm & 1.2 T & 0.07 kW/kg & VAC\\
+Nano-crystalline& VitroPerm & 1.2 T & 0.07 kW/kg & VAC\\
 & Nanoperm & 1.2 T & 0.04 kW/kg & Magnetec\\
 & Namglass 4 & 1.23 T & 0.04 kW/kg & Magmet\\
 \hline
@@ -281,8 +277,8 @@ Silicon Steel & Arnon 7 & 1.53 T & 1.6 kW/kg & Arnold\\
   \label{material_table}
 \end{figure}
 
-The hysteresis losses and the core loss of different materials are compared in Fig.~\ref{core-loss}. Core losses in a logaritmic scale are presented in Fig.~\ref{core-loss-log}. It can bee seen that between 1 kHz and 1 kHz, the core loss of 0.3 mm silicon-steel laminations are 25 times higher than nano-crystalline material. 
-A 50 kV, high frequency (20 kHz), 150 kW transformer that uses nano-crystalline is presented in \cite{Filchev2009}, in which the core losses are estimated as 60W/kg at an operating flux density of 1 T.
+The hysteresis losses and the core loss of different materials are compared in Fig.~\ref{core-loss}. Core losses are presented in Fig.~\ref{core-loss-log}. It can be seen that between 1 kHz and 10 kHz, the core loss of 0.3 mm silicon-steel laminations are 25 times higher than nano-crystalline material. 
+A 50 kV, high frequency (20 kHz), 150 kW transformer that uses nano-crystalline material is presented in \cite{Filchev2009}, in which the core losses are estimated as 60W/kg at an operating flux density of 1 T.
 
 \begin{figure}[]
   \centering
@@ -295,7 +291,7 @@ A 50 kV, high frequency (20 kHz), 150 kW transformer that uses nano-crystalline 
 \begin{figure}[]
   \centering
     \includegraphics[scale=0.3]{vitroperm_core_losses_vs_freq}
-  \caption{Core loss comparison of nano-crystalline (Vitroperm) with electrical steel and amorphous material \cite{vitroterm_manual}.}
+  \caption{Core loss comparison of nano-crystalline (VitroPerm) with electrical steel and amorphous material \cite{vitroterm_manual}.}
   \label{core-loss-log}
 \end{figure}
 
