secondary coil loss

--- a/transformer_report.tex
+++ b/transformer_report.tex
@@ -367,10 +367,11 @@ as can be seen from the equation above,  the important factor is the penetration
   \label{resistance_factor}
 \end{figure}
 
-!! Secondary winding factorunu karsilastir
-\cite{Sullivan2003,Ferreira1994} makalelerini oku
+\subsubsection{Secondary-Winding}
 
-\section{Secondary-Winding}
+There are different analytical models to estimate the AC resistance in round conductors (e.g. high voltage cables that can be used in the secondary winding), such as presented in \cite{Sullivan2003,Ferreira1994}. Although, the method presented by Dowell in \cite{Dowell1966} is assumed as the most established method. In this method Dowell introduced a porosity factor to convert the round conductors to square conductors and then convert to foil type conductors.
+
+
 kablo katalogu
 http://dielectricsciences.thomasnet.com/viewitems/all-categories/wire-cable-2
 
